[package]
name = "git_rust"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/yourname/git_rust"
keywords = ["git", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
flate2 = "1.1.2"
hex = "0.4.3"
ignore = "0.4.23"
sha1 = "0.10.6"
tempfile = "3.20.0"
thread_local = "1.1.9"
git2 = "0.20.2"
